# fluxroute

./: .dockerignore  .gitignore  .golangci.yml  CONTRIBUTING.md  LICENSE  Makefile  README.md  RULES.md  SECURITY.md  SOUL.md  agent.yaml  go.mod  go.sum
.github/: CODEOWNERS
.github/workflows/: ci.yml
cmd/cli/: main.go  main_test.go
cmd/controlplane/: main.go
cmd/router/: main.go
configs/: router.example.yaml
demo/: README.md  screencast-outline.md
demo/manifests/: tenant-a.yaml  tenant-b.yaml  tenant-failure.yaml
demo/scripts/: 00_start_services.sh  01_provision_tenants.sh  02_run_workflows.sh  03_replay_and_billing.sh  04_resilience_failure_case.sh  05_stop_services.sh  record-demo.sh
deploy/: Dockerfile.controlplane  Dockerfile.router
deploy/k8s/: controlplane-configmap.yaml  controlplane-deployment.yaml  controlplane-service.yaml  kustomization.yaml  namespace.yaml  router-configmap.yaml  router-deployment.yaml  router-service.yaml
docs/: benchmark-baseline-2026-02-14.md  benchmark-external-2026-02-23.md  buyer-architecture-narrative.md  competitive-proof.md  development-blueprint.md  end-user-goals.md  goal-to-dev-traceability.md  operations.md  positioning.md  release-checklist.md  requirement-verification-2026-02-14.md  sdk-quickstart.md  sources.md  start-here.md
hooks/: on-failure.sh  post-run.sh  pre-run.sh
pkg/sdk/: sdk.go  (+3 more)
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: run_and_invoice.py
sdk/python/src/fluxroute_sdk/: __init__.py  client.py  models.py
skills/: replay.skill  run.skill  scaffold.skill  validate.skill
(+99 files in other folders)
