[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fluxroute-sdk"
version = "0.1.0"
description = "Python SDK for FluxRoute router and control-plane APIs"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "FluxRoute Maintainers"}]
license = {text = "Apache-2.0"}
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
